[project]
name = "doro"
description = "CLI based pomodoro app"
readme = "README.md"
authors = [
    { name = "Suresh Kumar", email = "sureshdsk91@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "pyglet==1.5.19",
    "pyyaml==6.0.2",
    "rich==10.9.0",
    "typer==0.3.2",
]
dynamic = [
    "version"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.version]
path = "src/app/__version__.py"

[tool.hatch.build]
include = [
  "src/app/sounds/*.wav",
  "src/app"
]

[project.scripts]
doro = "app:app"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]

