[project]
name = "doro"
description = "CLI based pomodoro app"
readme = "README.md"
authors = [
    { name = "Suresh Kumar", email = "sureshdsk91@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "mitmproxy>=11.1.3",
    "pyglet==1.5.19",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "typer==0.15.2",
]
dynamic = [
    "version"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.version]
path = "src/app/__version__.py"

[tool.hatch.build]
include = [
  "src/app/sounds/*.wav",
  "src/app"
]

[project.scripts]
doro = "app:app"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]

